feat: improve sales filters and invoice footer
