# lib/api-spec/openapi.yaml
@@ -286,6 +286,18 @@ paths:
           in: query
           schema:
             type: string
+        - name: productType
+          in: query
+          schema:
+            type: string
+        - name: status
+          in: query
+          schema:
+            type: string
+        - name: saleType
+          in: query
+          schema:
+            type: string
       responses:
         "200":
           description: List of sales
@@ -630,6 +642,10 @@ paths:
       summary: List all movements
       parameters:
         - name: type
+          in: query
+          schema:
+            type: string
+        - name: status
           in: query
           schema:
             type: string
